--- a/build.gradle
+++ b/build.gradle
@@ -56,4 +56,6 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:19.0.1'
     implementation "androidx.room:room-runtime:2.4.2"
     implementation "androidx.room:room-ktx:2.4.2"
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
 }
