--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-parcelize'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -28,10 +29,13 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
     kotlinOptions {
         jvmTarget = '1.8'
     }
@@ -50,12 +54,11 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.5'
     implementation 'com.google.android.gms:play-services-maps:18.0.2'
     implementation 'com.squareup.okhttp3:okhttp:4.9.3'
-
+    implementation 'com.google.code.gson:gson:2.8.8'
     implementation 'com.github.fondesa:kpermissions:3.3.0'
-
+    kapt "androidx.room:room-compiler:2.4.2"
     implementation 'com.google.android.gms:play-services-location:19.0.1'
     implementation "androidx.room:room-runtime:2.4.2"
     implementation "androidx.room:room-ktx:2.4.2"
     implementation 'com.squareup.picasso:picasso:2.71828'
-
 }
